2004-08-31  Pavel S. Shirshov  <pavelsh@mail.ru>

	* include/slang.h: Revert last changes - it breaks compiling
	* sldisply.c: Likewise.
	* slerr.c: Likewise.
	* slsmg.c: Likewise.
	* sltermin.c: Likewise.

2004-08-29  Roland Illig  <roland.illig@gmx.de>

	* slang.h: Added const qualifier to some of the SLang functions.

2003-09-26  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* sldisply.c (RGB_to_BGR): Make const.
	* slsignal.c (SLsystem): Commented out.

2003-09-11  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* slerr.c (SLang_doerror): Fix possible off-by-one error.
	* sltermin.c (_SLtt_tigetent): Likewise.

2002-11-28  Pavel Roskin  <proski@gnu.org>

	* sldisply.c: Fix for the previous patch.  Only swap colors if
	setf and setb are not empty.
	Reported by Andras Barthazi <andras@barthazi.hu>

2002-10-25  Pavel Roskin  <proski@gnu.org>

	* sldisply.c: Patch to swap blue and red colors for setf/setb
	capabilities.  Needed on QNX Neutrino.
	Reported by Pavel Shirshov <pavelsh@mail.ru>

2002-10-07  Pavel Roskin  <proski@gnu.org>

	* include/jdmacros.h: Define SLMEMSET and SLMEMCPY
	unconditionally, use macros with arguments.
	* include/_slang.h: Make it clear which parts are disabled
	for compatibility with glib.
	* include/slinclud.h: Include malloc.h only if STDC_HEADERS is
	not defined.

2002-10-07  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* sldisply.c (Color_Def_Type): Make const.
	* slsmg.c (Fake_Alt_Char_Pairs): Likewise.
	* sltermin.c (Tgetstr_Map_Type): Likewise.
	* slutty.c (Baud_Rate_Type): Likewise.

2002-10-07  Pavel Roskin  <proski@gnu.org>

	Update to S-Lang 1.4.5.  Move include files to "include"
	directory to avoid the need to rename slang.h.
	* Makefile.am: Adjust file list.  Add "-Iinclude" to the
	compiler flags.
	* include/jdmacros.h: Rewrite to use glib.
	* slmisc.c: Trim to include only needed functions.

2002-09-18  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* slerr.c (SLang_doerror): Use error parameter.  Eliminate
	err[] array.
