@@ -1,3 +1,8 @@
+2004-09-04  Pavel S. Shirshov  <pavelsh@mail.ru>
+
+	* sltermin.c (): Avoid strncpy, home_ti is 1K long and 
+	nobody really needs it whole cleared
+
 2004-08-31  Pavel S. Shirshov  <pavelsh@mail.ru>
 
 	* include/slang.h: Revert last changes - it breaks compiling
